--- a/mai.css
+++ b/mai.css
@@ -3,3 +3,22 @@
   margin: 0;
   box-sizing: border-box;
 }
+.Nav-container {
+  display: flex;
+  justify-content: space-between;
+  background-color: aquamarine;
+  height: 5dvw;
+  align-items: center;
+}
+.Navigation {
+  display: flex;
+  justify-content: space-between;
+  width: 75dvw;
+  text-decoration: none;
+  color: black;
+}
+a {
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+}
