--- a/about.css
+++ b/about.css
@@ -3,3 +3,37 @@
   margin: 0;
   box-sizing: border-box;
 }
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 24px;
+}
+.product-card {
+  background-color: rgb(176, 4, 4);
+  border-radius: 10px;
+  padding: 15px;
+  box-shadow: 0 2px 8px rgba (0, 0, 0, 0.7);
+  text-align: center;
+}
+.product-card img {
+  width: 100%;
+  height: 16rem;
+  border-radius: 4px;
+}
+.price {
+  font-size: 1.2em;
+  margin: 10px 0;
+  color: white;
+}
+button {
+  padding: 10px 20px;
+  background-color: #2d89ef;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+button:hover {
+  color: #1b5fbf;
+  background-color: white;
+}
