--- a/mai.css
+++ b/mai.css
@@ -29,3 +29,36 @@ a {
 .holder1 {
   display: flex;
 }
+.Navigation a {
+  font-size: 25px;
+  display: flex;
+  justify-content: flex-start;
+}
+.Imageh img {
+  width: 6dvh;
+}
+.con2 {
+  display: flex;
+  flex-direction: column;
+  max-width: 1440px;
+  background-color: gold;
+  color: gray;
+  text-align: center;
+  position: relative;
+  bottom: 0;
+  flex: 0;
+  font-size: 25px;
+  text-transform: uppercase;
+}
+.con {
+  flex: 0;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  bottom: 0;
+}
+.p11 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
