--- a/about.css
+++ b/about.css
@@ -3,37 +3,32 @@
   margin: 0;
   box-sizing: border-box;
 }
-.product-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 24px;
-}
-.product-card {
-  background-color: rgb(176, 4, 4);
-  border-radius: 10px;
-  padding: 15px;
-  box-shadow: 0 2px 8px rgba (0, 0, 0, 0.7);
+.footer {
+  background-color: white;
+  color: white;
+  margin-top: auto;
   text-align: center;
 }
-.product-card img {
-  width: 100%;
-  height: 16rem;
-  border-radius: 4px;
+.footer1 {
+  background-color: rgba(30, 152, 222, 0.635);
+  padding: 4px;
 }
-.price {
-  font-size: 1.2em;
-  margin: 10px 0;
-  color: white;
+.footer1-text {
+  font-size: 16px;
 }
-button {
-  padding: 10px 20px;
-  background-color: #2d89ef;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-button:hover {
-  color: #1b5fbf;
+.footer1-btn {
   background-color: white;
+  color: black;
+  padding: 8px;
+  outline: none;
+  border: none;
+  margin-left: 8px;
+  font-weight: 600;
+}
+.footer2 {
+  background-color: black;
+  color: white;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
 }
