--- a/contact us .css
+++ b/contact us .css
@@ -3,3 +3,21 @@
   margin: 0;
   box-sizing: border-box;
 }
+.con {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.con2 {
+  background-color: black;
+  color: white;
+  margin-top: auto;
+}
+.con3 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
