--- a/mai.css
+++ b/mai.css
@@ -3,6 +3,11 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
+}
 .Nav-container {
   display: flex;
   justify-content: space-between;
@@ -50,15 +55,84 @@ a {
   font-size: 25px;
   text-transform: uppercase;
 }
-.con {
-  flex: 0;
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(425px, 1fr));
+  gap: 24px;
+}
+.product-card {
+  background-color: gray;
+  border-radius: 10px;
+  padding: 15px;
+  box-shadow: 0 2px 8px rgba (0, 0, 0, 0.7);
+  text-align: center;
+}
+.product-card img {
+  width: 100%;
+  height: 16rem;
+  border-radius: 4px;
+}
+.price {
+  font-size: 1.2em;
+  margin: 10px 0;
+  color: white;
+}
+button {
+  padding: 10px 20px;
+  background-color: aquamarine;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+button:hover {
+  color: #1b5fbf;
+  background-color: white;
+}
+.sec {
+  background-color: #2d89ef;
   display: flex;
   flex-direction: column;
-  position: relative;
-  bottom: 0;
-}
-.p11 {
-  display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  font-size: 60px;
+  height: 100%;
+  margin: 20px 0;
+}
+.sec1 {
+}
+.explore-button {
+  background-color: aquamarine;
+  color: white;
+  margin: 8px;
+}
+.footer {
+  background-color: white;
+  color: white;
+  margin-top: auto;
+  text-align: center;
+}
+.footer1 {
+  background-color: rgba(30, 152, 222, 0.635);
+  padding: 4px;
+}
+.footer1-text {
+  font-size: 16px;
+}
+.footer1-btn {
+  background-color: white;
+  color: black;
+  padding: 8px;
+  outline: none;
+  border: none;
+  margin-left: 8px;
+  font-weight: 600;
+}
+.footer2 {
+  background-color: black;
+  color: white;
+  padding: 16px;
+}
+span {
+  margin: 20px;
 }
