--- a/mai.css
+++ b/mai.css
@@ -11,7 +11,6 @@ body {
   font-family: Arial, sans-serif;
 }
 
-
 .Nav-container {
   display: flex;
   justify-content: space-between;
@@ -36,7 +35,6 @@ body {
   color: black;
   font-size: 1.2rem;
 }
-
 
 .sec {
   background-color: #672def5b;
@@ -63,7 +61,6 @@ body {
   color: #7f49e2;
 }
 
-
 .product-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -83,7 +80,7 @@ body {
 .product-card img {
   width: 100%;
   height: 16rem;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 4px;
 }
 
